--- a/fibobacci.html
+++ b/fibobacci.html
@@ -15,11 +15,11 @@
 <body>
     <form>
         <h1>Fibonacci Calculator</h1>
-        <div>
+    <div>
         <span>The Fibonacci Of </span>
         <input type="text" placeholder="#" id="fInput"> 
         <button type="button" class="btn btn-primary" id="fButton">Is</button>
-        <span id="displayF"></span>
+        <div id="displayF" class=" text-primary"></div>
     </div>
     <form>
 </body>
