--- a/fibobacci.html
+++ b/fibobacci.html
@@ -17,11 +17,15 @@
         <h1>Fibonacci Calculator</h1>
     <div>
         <span>The Fibonacci Of </span>
-        <input type="text" placeholder="#" id="fInput"> 
+        <input type="number" placeholder="#" id="fInput"> 
         <button type="button" class="btn btn-primary" id="fButton">Is</button>
         <div id="displayF" class=" text-primary"></div>
+        <div id="serverError"></div>
     </div>
+    <p class="error dNone">Can't be larger than 50</p>
     <form>
 </body>
 <script src="fibonacci.js"></script>
 </html>
+
+
