update with error tracker

--- a/fibobacci.html
+++ b/fibobacci.html
@@ -24,6 +24,8 @@
     </div>
     <p class="error dNone">Can't be larger than 50</p>
     <form>
+        <h2>Results</h2><span class="spinner-border"></span>
+        
 </body>
 <script src="fibonacci.js"></script>
 </html>
