--- a/fibobacci.html
+++ b/fibobacci.html
@@ -12,18 +12,33 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
-    <form>
-        <h1>Fibonacci Calculator</h1>
+<body class="d-flex flex-column">
+    <h1 class="display-1 m-5" >Fibonacci Calculator</h1>
+    <form class="d-flex flex-col m-5 align-items-start">
     <div>
-        <span>The Fibonacci Of </span>
-        <input type="number" placeholder="#" id="fInput"> 
-        <button type="button" class="btn btn-primary" id="fButton">Is</button>
-        <div id="displayF" class=" text-primary"></div>
+        <div class="fs-4 p-1">The Fibonacci of</div>
+        <div class="p-1">
+            <input type="number" size="1" class="form-control" style="width:100px" placeholder="#" id="fInput"/>
+          </div>
+          <div class="p-1">
+            <button type="button" class="btn btn-primary" id="fButton">Is</button>
+          </div>
+          <div class="fs-4 p-1">
+          </div>
+        <div id="displayF" class=" text-primary m-2"></div>
         <div id="serverError"></div>
     </div>
-    <p class="error dNone">Can't be larger than 50</p>
-    <form>
+    <p class="error d-none">Can't be larger than 50</p>
+    </form>
+        <div class="d-flex flex-row align-items-center mt-3 mb-5">
+            <h2 class="display-3 ms-5 ">Results</h2>
+            <div class="ms-3 spinner-border d-none" role="status" id="spinnerResult">
+              <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+        <div class="mt-3 ms-5 resultContainer flex-column align-items-start">
+            <!-- <span class="fs-5 border-bottom pb-3 border-secondary">The Fibonnaci Of <b>8</b> is <b>21</b>. Calculated at: Thu Feb 2 2020 10:33:24 GMT+0200 (Israel Standard Time) </span> -->
+        </div>
 </body>
 <script src="fibonacci.js"></script>
 </html>
